--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="icon" href="img/coding.png" type="image/png">
+	<link rel="icon" href="img/icon.png" type="image/png">
 	<title>Pietro & Gabriel 2030</title>
 
 	<!--================ CSS ================-->
